--- a/Login2.html
+++ b/Login2.html
@@ -444,7 +444,7 @@
         </div>
         <div class="right-panel">
             <img alt="Brown square logo with white tree and decorative border" height="100"
-                src="asset/images/vsk_Logo.jpeg" width="100" class="mb-2" />
+                src="asset/images/VSK_LOGO.jpeg" width="100" class="mb-2" />
             <h2 class="fw-semibold fs-5 mb-4">VSK USER LOGIN</h2>
             <form class="w-100" style="max-width: 320px;">
                 <div class="mb-3 position-relative">
