--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <h3 class="font-devanagari text-info fw-semibold fs-3 mb-3" style="color:#0b6f6f;">विद्या समीक्षा केंद्र
             </h3>
         </div>
-        <img src="asset/images/vsk_Logo.jpeg" alt="#" class="logo-img" />
+        <img src="asset/images/VSK_LOGO.jpeg" alt="#" class="logo-img" />
     </div>
 
     <div class="container d-flex justify-content-center align-items-center my-4 position-relative" style="z-index:10;">
